{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Controls",
            "id": "6e9eed07-a8fc-46c2-b447-9a0cf16c210c",
            "actions": [
                {
                    "name": "ToggleCameras",
                    "type": "Button",
                    "id": "e1b12a70-dca9-4ffe-83ef-f6c2e9859f7d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleLeftDoor",
                    "type": "Button",
                    "id": "2bca4275-f499-41e2-a023-b5aa0362bee6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleRightDoor",
                    "type": "Button",
                    "id": "3ba2b56e-fceb-47b2-9ead-265b24f3ebb4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c4c5fb4f-228f-4c88-8fc1-d94c3790fcbf",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "ToggleCameras",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9be0e8c7-03d8-495e-982a-77f6ef0ec4c5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "ToggleLeftDoor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0543b17-3580-465d-a352-a5730fe6ef11",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "ToggleRightDoor",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Controls",
            "bindingGroup": "Controls",
            "devices": []
        }
    ]
}